# hilan-attendance

./: .gitignore  LICENSE  README.md  pyproject.toml
hilan_attendance/: __init__.py  attendance.py  cli.py  config.py  display.py  models.py  vocabulary.py
hilan_attendance/browser/: __init__.py  browser.py  session.py
hilan_attendance/browser/pages/: __init__.py  base.py  calendar.py  home.py  login.py
