[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hilan-attendance"
version = "1.0.1"
description = "CLI tool to auto-fill attendance hours on the Hilan website."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ron Harel"}
]
keywords = ["hilan", "attendance", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
hilan = "hilan_attendance.cli:main"

# Dev scripts (run with: hatch run <script>)
[tool.hatch.envs.default]
dependencies = ["ruff>=0.8.0", "ty"]

[tool.hatch.envs.default.scripts]
fmt = "ruff format ."
lint = "ruff check ."
typecheck = "ty check"
check = ["fmt", "lint", "typecheck"]

# Ruff - linting & formatting
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",           # line too long
    "W191",           # indentation contains tabs
    "UP007", "UP045"  # prefer X | Y syntax, I like Optional...
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

# ty - type checking (Astral)
[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-import = "ignore"  # ty doesn't auto-detect venvs yet
